<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/margin_24"
    android:layout_height="match_parent"
    tools:context=".ui.Register">


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:id="@+id/confirm_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:fontFamily="@font/touche"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:textSize="@dimen/text_title_size"
        android:layout_marginTop="96dp"
        android:text="@string/sign_up"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/confirm_description"
        android:layout_width="wrap_content"
        android:fontFamily="@font/touche"
        app:layout_constraintTop_toBottomOf="@id/confirm_title"
        android:textStyle="bold"
        android:textSize="@dimen/regular_text_size"
        android:text="@string/signup_welcome"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_fullnames"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="@dimen/margin_24"
        android:hint="Full name"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:lines="1"
        android:fontFamily="@font/touche"
        android:textSize="@dimen/regular_text_size"
        android:background="@drawable/input_background"
        app:layout_constraintTop_toBottomOf="@id/confirm_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/regular_text_size"
        android:padding="10dp"
        android:fontFamily="@font/touche"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="Email address"
        android:layout_marginTop="@dimen/margin_24"
        android:background="@drawable/input_background"
        app:layout_constraintTop_toBottomOf="@id/edit_fullnames"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:inputType="textPostalAddress"
        android:textSize="@dimen/regular_text_size"
        android:padding="10dp"
        android:fontFamily="@font/touche"
        android:drawableStart="@drawable/ic_baseline_home_work_24"
        android:drawablePadding="10dp"
        android:hint="Physical address"
        android:layout_marginTop="@dimen/margin_24"
        android:background="@drawable/input_background"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:inputType="textPassword"
        android:textSize="@dimen/regular_text_size"
        android:padding="10dp"
        android:fontFamily="@font/touche"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="Password"
        android:layout_marginTop="@dimen/margin_24"
        android:background="@drawable/input_background"
        app:layout_constraintTop_toBottomOf="@id/edit_address"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:cornerRadius="15dp"
        app:backgroundTint="@color/green"
        android:id="@+id/sign_up_btn"
        android:text="Sign up"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/margin_48"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        app:layout_constraintTop_toBottomOf="@id/edit_password"/>

    <com.google.android.material.textview.MaterialTextView
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/login_copyright"
        android:layout_width="match_parent"
        android:fontFamily="@font/touche"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin_24"
        android:text="@string/all_rights"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>