<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_24"
    tools:context=".ui.ConfirmCode">
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:id="@+id/confirm_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:fontFamily="@font/touche"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:textSize="@dimen/text_title_size"
        android:layout_marginTop="96dp"
        android:text="@string/two_factor_auth"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/confirm_description"
        android:layout_width="wrap_content"
        android:fontFamily="@font/touche"

        app:layout_constraintTop_toBottomOf="@id/confirm_title"
        android:textStyle="bold"
        android:textSize="@dimen/regular_text_size"
        android:text="@string/confirmation_description"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="6"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/confirm_description"
        android:layout_marginTop="20dp">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="72dp"
            android:maxLength="1"
            android:id="@+id/editText1"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:maxEms="1"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="@dimen/regular_text_size"
            android:fontFamily="@font/touche"
            android:background="@drawable/input_background"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="72dp"
            android:padding="10dp"
            android:maxLength="1"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:id="@+id/editText2"
            android:maxEms="1"
            android:layout_marginEnd="10dp"
            android:textSize="@dimen/regular_text_size"
            android:fontFamily="@font/touche"
            android:background="@drawable/input_background"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="72dp"
            android:padding="10dp"
            android:maxLength="1"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:maxEms="1"
            android:id="@+id/editText3"
            android:layout_marginEnd="10dp"
            android:textSize="@dimen/regular_text_size"
            android:fontFamily="@font/touche"
            android:background="@drawable/input_background"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="72dp"
            android:padding="10dp"
            android:maxLength="1"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:maxEms="1"
            android:layout_marginEnd="10dp"
            android:id="@+id/editText4"
            android:textSize="@dimen/regular_text_size"
            android:fontFamily="@font/touche"
            android:background="@drawable/input_background"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="72dp"
            android:padding="10dp"
            android:maxLength="1"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:maxEms="1"
            android:id="@+id/editText5"
            android:layout_marginEnd="10dp"
            android:textSize="@dimen/regular_text_size"
            android:fontFamily="@font/touche"
            android:background="@drawable/input_background"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="72dp"
            android:maxLength="1"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:maxEms="1"
            android:id="@+id/editText6"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="@dimen/regular_text_size"
            android:fontFamily="@font/touche"
            android:background="@drawable/input_background"
            />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:cornerRadius="15dp"
        android:id="@+id/resend_btn"
        app:backgroundTint="@color/green"
        android:layout_marginBottom="@dimen/margin_24"
        android:text="Resend email"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/margin_48"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        app:layout_constraintBottom_toTopOf="@id/confirm_copyright"/>

    <com.google.android.material.textview.MaterialTextView
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/confirm_copyright"
        android:layout_width="match_parent"
        android:fontFamily="@font/touche"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin_24"
        android:text="@string/all_rights"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>